[ASDP-714] bump github-api version